made some changes to the codesandbox.

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -4,9 +4,9 @@
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
-    "cd frontend yarn run dev": {
-      "name": "cd frontend yarn run dev",
-      "command": "cd frontend yarn run dev",
+    "App": {
+      "name": "running application",
+      "command": "cd backend && yarn && cd frontend && yarn && yarn run dev",
       "runAtStart": true
     }
   }
