corrected the bug on the task.json of correct repo

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -6,7 +6,7 @@
   "tasks": {
     "App": {
       "name": "running application",
-      "command": "cd backend && yarn && cd frontend && yarn && yarn run dev",
+      "command": "cd backend && yarn && cd ./frontend && yarn && yarn run dev",
       "runAtStart": true
     }
   }
