--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,12 +1,10 @@
 {
-  // These tasks will run in order when initializing your CodeSandbox project.
   "setupTasks": [],
 
-  // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "App": {
       "name": "running application",
-      "command": "cd backend && yarn && cd ./frontend && yarn && yarn run dev",
+      "command": "cd backend && yarn && cd ../frontend && yarn && yarn run dev",
       "runAtStart": true
     }
   }
